Se crearon los controllers base

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+server.port=8081
+spring.datasource.url=jdbc:h2:file:/workspace/bdsh2/dblotes
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+
+#generic properties
+spring.jpa.show_sql=true
+logging.level.web=DEBUG
+
+server.servlet.context-path=/api
