--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,11 @@ server.port=8081
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
+server.tomcat.max-swallow-size=20MB
+server.tomcat.max-http-form-post-size=20MB
+
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
 
 #generic properties
 spring.jpa.show_sql=true
