--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,10 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql: true
+
+#para windows
+app.file.resource-mapping=file:///C:/docfiles/
+app.file.upload-dir=C:\\docfiles\\
+
+#par alinux/mac
+#app.file.resource-mapping=file:~/Desktop/docfiles/
