--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 server.port=8081
-#spring.datasource.url=jdbc:h2:file:/workspace/bdsh2/dblotes
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:file:/workspacesSts/bdsh2/dblotes
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.enabled=true
+properties.hibernate.dialect: org.hibernate.dialect.H2Dialect
 
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
@@ -21,13 +23,13 @@ logging.level.web=DEBUG
 
 server.servlet.context-path=/api
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_lotes
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql: true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_lotes
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.show-sql: true
 
 #para windows
 app.file.resource-mapping=file:///C:/docfiles/
@@ -35,3 +37,4 @@ app.file.upload-dir=C:\\docfiles\\
 
 #par alinux/mac
 #app.file.resource-mapping=file:~/Desktop/docfiles/
+
