--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,17 +8,12 @@ server.port=8081
 #spring.h2.console.enabled=true
 #properties.hibernate.dialect: org.hibernate.dialect.H2Dialect
 
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-
 server.tomcat.max-swallow-size=20MB
 server.tomcat.max-http-form-post-size=20MB
-
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
 #generic properties
-spring.jpa.show_sql=true
 logging.level.web=DEBUG
 
 server.servlet.context-path=/api
@@ -28,11 +23,12 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql: true
 #spring.jpa.hibernate.ddl-auto=create-drop
-
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 #para windows
 app.file.resource-mapping=file:///C:/docfiles/
 app.file.upload-dir=C:\\docfiles\\
