--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,16 @@ logging.level.web=DEBUG
 
 server.servlet.context-path=/api
 
-spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_lotes
-spring.datasource.username=root
-spring.datasource.password=root
+#bDLocal
+#spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_lotes
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#bdRemote
+spring.datasource.url=jdbc:mysql://10.0.1.203:3306/proyecto_lotes
+spring.datasource.username=mysqladmin
+spring.datasource.password=Argentina1$
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.jpa.generate-ddl=true
@@ -30,9 +37,11 @@ spring.jpa.show-sql: true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 #para windows
-app.file.resource-mapping=file:///C:/docfiles/
-app.file.upload-dir=C:\\docfiles\\
+#app.file.resource-mapping=file:///C:/docfiles/
+#app.file.upload-dir=C:\\docfiles\\
 
-#par alinux/mac
+#par alinux/mac /home/opc/docfiles/
 #app.file.resource-mapping=file:~/Desktop/docfiles/
+app.file.resource-mapping=file:/home/opc/docfiles/
+app.file.upload-dir=/home/opc/docfiles/
 
