--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,17 +19,17 @@ logging.level.web=DEBUG
 server.servlet.context-path=/api
 
 #bDLocal
-#spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_lotes
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#bdRemote
-spring.datasource.url=jdbc:mysql://10.0.1.203:3306/proyecto_lotes
-spring.datasource.username=mysqladmin
-spring.datasource.password=Argentina1$
+spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_lotes
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#bdRemote
+#spring.datasource.url=jdbc:mysql://10.0.1.203:3306/proyecto_lotes
+#spring.datasource.username=mysqladmin
+#spring.datasource.password=Argentina1$
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql: true
